Upgrade calibre-web to 0.6.18 and calibre to 5.43.0 .

--- a/src/.env
+++ b/src/.env
@@ -1,8 +1,7 @@
-CALIBRE_VERSION=5.43.0
-CALIBRE_WEB_VERSION=5.43.0
+CALIBRE_VERSION=5.44.0
+CALIBRE_WEB_VERSION=0.6.18
 
-#CALIBRE_ROOT=/mnt/cdd/servers/calibre
-CALIBRE_ROOT=${PWD}/calibre
+CALIBRE_ROOT=${PWD}/apps_data
 
 CALIBRE_APP_ROOT=${CALIBRE_ROOT}/app
 
